--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     rel="stylesheet">
 
 </head>
-
+             
 <body>
 
   <!-- Nav Bar -->
@@ -57,7 +57,7 @@
       <div class="heading-text">
         <hr class="line-1">
         <h1 class="h1"> Empowering Women's Health at Every Stage of Life. </h1>
-        <p class="content"> Access valuable tools and information for menstruation tracking, cycle prediction, conception, pregnancy, motherhood, and menopause. Take charge of your well-being with our humanized insurance approach. Ensure you
+        <p class="content"> Access valuable tools and information for menstruation tracking, cycle prediction, conception, pregnancy, motherhood, and menopause. Take charge of your well-being with our humanized protection approach. Ensure you
           and your loved ones are protected. </p>
         <button class="nav-btn"> View plans </button>
       </div>
@@ -81,7 +81,7 @@
             <img class="img" src="images/icon-snappy-process.svg" alt="snappy">
           </div>
           <h2 class="service-title"> Snappy Process</h2>
-          <p class="details">Say goodbye to lengthy paperwork. Our application process takes minutes, not hours. Skip the hassle and get insured effortlessly. </p>
+          <p class="details">Say goodbye to lengthy paperwork. Our application process takes minutes, not hours. Skip the hassle and get protected effortlessly. </p>
         </div>
 
         <div class="service-box">
@@ -111,11 +111,11 @@
     <div class="container">
       <div class="box call-to-action">
         <div class="callout-head">
-          <h1> Unlocking Our Insurance Methodology<br>Putting Your Well-Being First </h1>
+          <h1> Unlocking Our Coverage Methodology<br>Putting Your Well-Being First </h1>
         </div>
         <div class="callout-btn">
           <button class="work-btn">
-            HOW WE empower
+            HOW WE EMPOWER
           </button>
         </div>
   </section>
